--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.1",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "country-list": "^2.3.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.6.2",
     "node-telegram-bot-api": "^0.63.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "telegraf": "^4.14.0"
   }
 }
